egonlang-core/res/examples/invalid/list_expression_with_mixed_types.eg
[1, 2, "foo", false];

// out: TypeError: mismatched types: expected type `number` but received `string`
// out: TypeError: mismatched types: expected type `number` but received `bool`